tests/sawn/fixtures/invalid/07_four_space_indent.sawn
// INVALID: 4-space indentation (must use exactly 2 spaces)
config
    host="localhost"
